feat(folia): migrate FastAsyncWorldEdit to region-safe Folia 26.2 execution